<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"

    tools:context=".MainActivity"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/head_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/navy_blue"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="RtlSymmetry"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/l_m_start"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/weight"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/navy_blue" />

                <TextView
                    android:id="@+id/height"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/height"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/navy_blue" />

                <TextView
                    android:id="@+id/bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/bmi"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/navy_blue" />

                <TextView
                    android:id="@+id/wc"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/within_criteria"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/navy_blue" />

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent"
                android:layout_marginEnd="@dimen/l_margin_e"

                >


                <EditText
                    android:id="@+id/editText_w"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_w"
                    android:importantForAutofill="no"
                    android:minWidth="@dimen/min_w"
                    android:inputType="numberDecimal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/navy_blue"
                    android:background="@drawable/edittext_bc_white"
                    android:padding="@dimen/padding"
                    android:layout_marginTop="@dimen/l_margin_t"
                    android:layout_marginBottom="@dimen/layout_marginBottom"
                    android:gravity="end"
                    android:maxWidth="@dimen/max_w"
                    android:paddingEnd="@dimen/pd_end"
                    tools:ignore="LabelFor,RtlSymmetry" />


                <EditText
                    android:id="@+id/editText_h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/enter_h"
                    android:minWidth="@dimen/min_w"
                    android:inputType="numberDecimal"
                    android:maxWidth="@dimen/max_w"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/navy_blue"
                    android:background="@drawable/edittext_bc_white"
                    android:padding="@dimen/padding"
                    android:layout_marginBottom="@dimen/layout_marginBottom"
                    android:gravity="end"
                    android:paddingEnd="@dimen/pd_end"
                    tools:ignore="ContentDescription,RtlSymmetry" />

                <TextView
                    android:id="@+id/TextView_bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/min_w"
                    android:maxWidth="@dimen/max_w"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/navy_blue"
                    android:background="@drawable/edittext_background"
                    android:padding="@dimen/padding"
                    android:layout_marginBottom="@dimen/layout_marginBottom"
                    android:gravity="end"
                    android:paddingEnd="@dimen/pd_end"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/TextView_wc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/min_w"
                    android:maxWidth="@dimen/max_w"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/navy_blue"
                    android:foreground="@drawable/bc"
                    android:padding="@dimen/padding"
                    android:layout_marginBottom="@dimen/layout_marginBottom"
                    android:gravity="end"
                    android:paddingEnd="@dimen/pd_end"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>


        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:minWidth="@dimen/min_w"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/navy_blue"
            android:foreground="@drawable/bc"
            android:padding="@dimen/padding"
            android:layout_marginBottom="@dimen/layout_marginBottom"
            android:gravity="center"
            android:backgroundTint="@color/white"
            />

    </LinearLayout>


</LinearLayout>